# contour-maps-visualization

./: .codecov.yml  .coverage  .coveragerc  .gitignore  .gitmodules  .travis.yml  Compare-gaussians.ipynb  Contourf_blending.ipynb  Draw-a-Rectangle.ipynb  Gaussian-Test-Generator.ipynb  Global-density-knowledge.ipynb  Hsv-color-space.ipynb  README.html  README.md  README.rst  Untitled.ipynb  Untitled1.ipynb  alpha-composing-specific.ipynb  anforderungen.txt  blending-through-mult.ipynb  color-blending.ipynb  color-density-with-matplotlib.ipynb  color_blending_operator.py  color_converter.py  color_operations.py  color_schemes.py  coverage.xml  ddhp-color-blending.ipynb  density-with-matplotlib.ipynb  drawing-contour-in-matplotlib.ipynb  gaussian_image_blending.ipynb  gaussian_test.ipynb  helper.py  hierarchical-composing.ipynb  hsv-color-space.ipynb  lab-color-space.ipynb  matplotlib-colorschemes-comparing-lab-rgb-porter-duff-operator.ipynb  matplotlib-colorschemes-porter-duff-source-over-simple-alpha.ipynb  matplotlibOverlapp.ipynb  matplotlib_colorschemes_blending.ipynb  (+11 more)
benchmarks/: c_implementation_benchmark.py
contour_visualization/: Distribution.py  Gaussian.py  MixingDistribution.py  MixtureModel.py  ModelbaseDistribution.py  __init__.py  c_color_blending_operator.py  c_picture_worker.py  (+18 more)
contour_visualization/cmodule/: CMakeLists.txt  gtest.cmake
contour_visualization/cmodule/include/: pictureMerge.hpp  rgb.hpp
contour_visualization/cmodule/src/: CMakeLists.txt  cieLab.cpp  pictureMerge.cpp  rgb.cpp
contour_visualization/cmodule/tests/: CMakeLists.txt  blendingOperatorsTests.cpp  pictureMergeTests.cpp
src/cmodule/tests/: CMakeLists.txt  pictureMergeTests.cpp
(+124 files in other folders)
